[gd_scene load_steps=51 format=3 uid="uid://cblwxr0m83s1y"]

[ext_resource type="Texture2D" uid="uid://d4lhha5gfe1ft" path="res://source/img/Pixel Crawler - FREE - 1.8/Enemy/Skeleton Crew/Skeleton - Base/Death/Death-Sheet.png" id="1_6xkde"]
[ext_resource type="Texture2D" uid="uid://bf2tdxlcdts1f" path="res://source/img/Pixel Crawler - FREE - 1.8/Enemy/Skeleton Crew/Skeleton - Base/Idle/Idle-Sheet.png" id="1_f4f35"]
[ext_resource type="Script" path="res://scn/enemy/enemy.gd" id="1_rh32n"]
[ext_resource type="PackedScene" uid="uid://cbi1mscfuohev" path="res://scn/public/enter_effect/green_enter.tscn" id="2_7n84a"]
[ext_resource type="Texture2D" uid="uid://p5kmc7oo8vsr" path="res://source/img/Pixel Crawler - FREE - 1.8/Enemy/Skeleton Crew/Skeleton - Base/Run/Run-Sheet.png" id="2_xhe83"]
[ext_resource type="Texture2D" uid="uid://cbl5m4j1osmh" path="res://source/img/Pixel Crawler - FREE - 1.8/Weapons/Wood/Wood.png" id="5_fkgvu"]
[ext_resource type="Texture2D" uid="uid://ccc3bfasy477m" path="res://source/img/Pixel Crawler - FREE - 1.8/Weapons/Hands/Hands.png" id="6_nc8h6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tciqg"]
radius = 6.0
height = 24.0

[sub_resource type="AtlasTexture" id="AtlasTexture_rnc01"]
atlas = ExtResource("1_6xkde")
region = Rect2(0, 32, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbqvl"]
atlas = ExtResource("1_6xkde")
region = Rect2(96, 32, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvsy6"]
atlas = ExtResource("1_6xkde")
region = Rect2(192, 32, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bapr"]
atlas = ExtResource("1_6xkde")
region = Rect2(288, 32, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvp80"]
atlas = ExtResource("1_6xkde")
region = Rect2(384, 32, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn160"]
atlas = ExtResource("1_6xkde")
region = Rect2(480, 32, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4j6e"]
atlas = ExtResource("1_6xkde")
region = Rect2(576, 32, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hh3kv"]
atlas = ExtResource("1_6xkde")
region = Rect2(672, 32, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib4ni"]
atlas = ExtResource("1_f4f35")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyipk"]
atlas = ExtResource("1_f4f35")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t32rt"]
atlas = ExtResource("1_f4f35")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjyy8"]
atlas = ExtResource("1_f4f35")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4802k"]
atlas = ExtResource("1_f4f35")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2tx0"]
atlas = ExtResource("1_f4f35")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5c3ff"]
atlas = ExtResource("1_f4f35")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmrys"]
atlas = ExtResource("1_f4f35")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a3tt"]
atlas = ExtResource("2_xhe83")
region = Rect2(0, 31, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xh05"]
atlas = ExtResource("2_xhe83")
region = Rect2(64, 31, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_6klf7"]
atlas = ExtResource("2_xhe83")
region = Rect2(128, 31, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5xee"]
atlas = ExtResource("2_xhe83")
region = Rect2(192, 31, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nimh"]
atlas = ExtResource("2_xhe83")
region = Rect2(256, 31, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_j18l4"]
atlas = ExtResource("2_xhe83")
region = Rect2(320, 31, 64, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_b7w2x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnc01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbqvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvsy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bapr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvp80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn160")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4j6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hh3kv")
}],
"loop": false,
"name": &"die",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hh3kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4j6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn160")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvp80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bapr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvsy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbqvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnc01")
}],
"loop": false,
"name": &"enter",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib4ni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyipk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t32rt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjyy8")
}],
"loop": true,
"name": &"hurt",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4802k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2tx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5c3ff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmrys")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a3tt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xh05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6klf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5xee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nimh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j18l4")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_tv144"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapons:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.928402)]
}

[sub_resource type="Animation" id="Animation_akfls"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["die"]
}

[sub_resource type="Animation" id="Animation_g7idc"]
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["enter"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enter_finish"
}]
}

[sub_resource type="Animation" id="Animation_8ow8x"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["hurt"]
}

[sub_resource type="Animation" id="Animation_1lp26"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("weapons:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 0.928402), Vector2(1, -1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_rqpd2"]
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d36fs"]
_data = {
"RESET": SubResource("Animation_tv144"),
"die": SubResource("Animation_akfls"),
"enter": SubResource("Animation_g7idc"),
"hurt": SubResource("Animation_8ow8x"),
"idle": SubResource("Animation_1lp26"),
"run": SubResource("Animation_rqpd2")
}

[sub_resource type="Animation" id="Animation_d2q8s"]
length = 0.001

[sub_resource type="Animation" id="Animation_aam8w"]
resource_name = "attack"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hf1t5"]
_data = {
"RESET": SubResource("Animation_d2q8s"),
"attack": SubResource("Animation_aam8w")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_odcew"]
atlas = ExtResource("6_nc8h6")
region = Rect2(21, 53, 7, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_auvcg"]
atlas = ExtResource("5_fkgvu")
region = Rect2(0, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kaju1"]
atlas = ExtResource("6_nc8h6")
region = Rect2(4, 53, 7, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oi83b"]
size = Vector2(8, 26.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jkwmo"]
size = Vector2(54.5, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vhdx1"]
size = Vector2(7, 20)

[sub_resource type="Animation" id="Animation_wkrx6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vx2jd"]
length = 0.6
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0xska"]
_data = {
"RESET": SubResource("Animation_wkrx6"),
"hurt": SubResource("Animation_vx2jd")
}

[node name="Base" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 3
motion_mode = 1
script = ExtResource("1_rh32n")
damage = 20

[node name="GreenEnter" parent="." instance=ExtResource("2_7n84a")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_tciqg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_b7w2x")
animation = &"enter"
autoplay = "enter"
frame = 7

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
neighbor_distance = 10.0
max_speed = 200.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d36fs")
}
autoplay = "enter"

[node name="weapons" type="Node2D" parent="."]
position = Vector2(1, 0.928402)

[node name="AnimationPlayer" type="AnimationPlayer" parent="weapons"]
libraries = {
"": SubResource("AnimationLibrary_hf1t5")
}
autoplay = "idle"

[node name="right" type="Node2D" parent="weapons"]

[node name="Sprite2D2" type="Sprite2D" parent="weapons/right"]
position = Vector2(10, 4.22376)
texture = SubResource("AtlasTexture_odcew")

[node name="left" type="Node2D" parent="weapons"]
position = Vector2(-15, 3.01846)
rotation = -1.66679

[node name="weapon" type="Sprite2D" parent="weapons/left"]
position = Vector2(-0.125526, -0.0650902)
rotation = 1.5708
texture = SubResource("AtlasTexture_auvcg")
offset = Vector2(0.125526, -14.9349)

[node name="Sprite2D" type="Sprite2D" parent="weapons/left"]
rotation = 1.5708
texture = SubResource("AtlasTexture_kaju1")

[node name="Hitbox" type="Area2D" parent="weapons/left"]
rotation = 1.5708
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="weapons/left/Hitbox"]
position = Vector2(0, -16.75)
shape = SubResource("RectangleShape2D_oi83b")
disabled = true
debug_color = Color(0.670588, 0.596078, 0, 0.682353)

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-1.75, -4)
shape = SubResource("RectangleShape2D_jkwmo")

[node name="hurtArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtArea"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_vhdx1")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0xska")
}

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-21, -2)

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="body_entered" from="weapons/left/Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
